Ignore database file App will create one if none exists

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 __pycache__/assessment.cpython-36.pyc
 __pycache__/datastore.cpython-36.pyc
+__pycache__/schoolrecords.cpython-36.pyc
+__pycache__/datastore.cpython-36.pyc
+__pycache__/assessment.cpython-36.pyc
+ais_marker_db
